tests/integration/libuild/errors/reference-error/libuild.config.ts
export default {
  input: {
    index: bcd + 1,
  },
};
